...

            <EditText
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTextUsername"
                android:hint="@string/username_hint"
                android:layout_weight="0.50" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_right"
                android:id="@+id/imgUserVerified"
                android:layout_weight="0.50"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
...
