<resources>
    <string name="app_name">Phone Speak</string>
    <string name="btnListPublicChannels">List Public Channels</string>
    <string name="btnListChannels">List Channels</string>
    <string name="channel_label_name">Name:</string>
    <string name="channel_label_id">ID:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="real_time">Real Time</string>
    <string name="channel_label_description">Description:</string>
...
    <string name="NoChannelsFound">There are no  channels with that information</string>
    <string name="data">Data</string>
    <string name="preference_file_key">pt.ipleiria.estg.dei.phonespeak.user_data_file</string>
    <string name="publicChannels">Public Channels</string>
    <string name="favoriteChannels">Favorite Channels</string>
    <string name="ownChannels">Own Channels</string>
    <string name="account_title">Account</string>
    <string name="username_hint">Username</string>
    <string name="api_key_hint">API Key</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="verify_button">Verify</string>
    <string name="sensor_name_text">Sensor Name</string>
    <string name="value_text">Value</string>
    <string name="not_available">N/A</string>
    <string name="empty_text" />
    <string name="not_have_favorite_channels">You don\'t have favorite channels</string>
    <string name="dont_have_own_channels">You don\'t have own channels</string>
...
