<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ipleiria.estg.dei.phonespeak.DashBoardActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/btnListChannels"
        android:text="@string/btnListChannels"
        android:onClick="onClickListPublicChannels" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnManualSync"
            android:src="@drawable/ic_button_sync"
            android:contentDescription="Manual Sync"
            android:onClick="onClickBtnManualSync" />

        <TextView
            android:text="Last synchronization: 21/10/2016 - 18:34"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtSyncStatus"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSensors"
            android:layout_weight="1" />

        <Switch
            android:text="@string/real_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchRealTime" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtResultsDate"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listSensors"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDashboardLog"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDashboardLog" />

</LinearLayout>
